TypeChecking/test_cases/bad/inherit-self.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Bad {
  x : Int <- 5 ;
} ;
